@@ -1,5 +1,11 @@
 2008-02-25  Alexander Larsson  <alexl@redhat.com>
 
+        * panel-menu-items.c:
+        * panel-util.c:
+	g_uri_get_scheme -> g_uri_parse_scheme
+
+2008-02-25  Alexander Larsson  <alexl@redhat.com>
+
 	* launcher.c (panel_launcher_delete):
 	Use g_file_has_prefix instead of renamed
 	g_file_contains_file.
